--- a/package.json
+++ b/package.json
@@ -1,9 +1,36 @@
 {
     "name": "scratch-asset-checker",
     "scripts": {
-        "build": "node AssetChecker.js"
+        "check:assets": "node ./src/AssetChecker.js",
+        "check:blocks": "node ./src/BlockChecker.js",
+        "check:all": "node ./src/projectChecker.js",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
     },
     "dependencies": {
-        "axios": "^0.19.0"
+        "@testing-library/jest-dom": "^4.2.4",
+        "@testing-library/react": "^9.4.0",
+        "@testing-library/user-event": "^8.0.2",
+        "axios": "^0.19.0",
+        "react": "^16.12.0",
+        "react-dom": "^16.12.0",
+        "react-scripts": "^3.3.0"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     }
 }
